Fix the missing IME candidate window

https://crrev.com/c/1396794 moves IME candidate to VK container
managed by KeyboardLayoutManager. KeyboardLayoutManager was
expecting only the VK contents window and blocks bounds change
for all other windows. As a result, IME candidate window bounds
change is ignored. This CL fixes the issue by making the layout
manager to allow other windows to change bounds.

Bug: 921689
Change-Id: I351543fc3129425e01773798f4abc08cf9d5e684
Reviewed-on: https://chromium-review.googlesource.com/c/1423298
Reviewed-by: Darren Shen <shend@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#624804}
Former-commit-id: 2515f154344593adc5bd81f9dce036d5845dbe58