ui/keyboard/keyboard_layout_manager.cc
@@ -27,8 +27,14 @@ void KeyboardLayoutManager::OnWindowAddedToLayout(aura::Window* child) {
 void KeyboardLayoutManager::SetChildBounds(aura::Window* child,
                                            const gfx::Rect& requested_bounds) {
   aura::Window* contents_window = controller_->GetKeyboardWindow();
-  if (contents_window != child)
+  if (contents_window != child) {
+    // Let the bounds change to go through for windows other than the virtual
+    // keyboard contents window. This is needed because IME candidate window is
+    // put in VirtualKeyboardContainer managed by this layout manager.
+    if (child->bounds() != requested_bounds)
+      SetChildBoundsDirect(child, requested_bounds);
     return;
+  }
 
   TRACE_EVENT0("vk", "KeyboardLayoutSetChildBounds");
 
